
* Release history

** Main branch change

- Add diff-change aider code snippet, it is a useful pattern to let aider suggest code change given diff as example

** v0.9.0

- Add aider-add-module function, it will add files with suffix in the module directory to aider session. It will be useful for the whole module level analysis and code change.
- Add recently added aider command, "/reasoning-effort" and "/think-tokens", to keyword highlight
- aider-change-model will ask reasoning-effort for chatgpt o4,o3,o1 model, when it is main model change
- README improvement
- Updated Chinese version of README
- aider-pull-or-review-diff-file support pull changes for magit staged files, as default option
- refactor the code review function since it has grown very large, with C-c a R (LLM suggest the refactoring strategy and I go ahead to accept it).
- aider-pull-or-review-diff-file: add function to resolve branch refs for remote branch handling
- aider-prompt-mode: improve robustness of snippet directory setup
- expose aider /copy command as a menu item
- Add experimental feature, aider-bootstrap.el. It introduce functions to bootstrap common code / doc structures using Aider.

** v0.8.4

- Improve prompts for 
  - diff review: aider-pull-or-review-diff-file
  - code refactoring suggestion: aider--handle-ask-llm-suggestion 
  - debug exception: aider-debug-exception

** v0.8.3

- fix: aider--process-message-if-multi-line: it will not add {aider..aider} block, when the str already contains {aider string. It cause /ask made change for multi-line prompt. (I thought it is an aider bug but it isn't: Aider-AI/aider#3893). The bug is not very obvious because aider-input-sender function didn't print the modification on the aider session.
- fix: aider--send-command trim both leading and trailing \n before sending. so it won't unnecessarily wrap prompt with {aider..aider} block